# mqtt-sn-gateway

./: README.md  Test Results - runAll_Tests.html  Test Results - runAll_Tests_including_longWill.html  bletestcase  bletestcase_filtered  init_project.sh
AdafuitBluefruitLEUARTFriendMqttSN/: HelloWorld  Readme.md
AdafuitBluefruitLEUARTFriendMqttSN/examples/: AdafruitConfiguration  LinuxConfiguration  UsefullATCommandOverview
ConvertingSTM32FToBlackMagicProbe/: Readme.md
ConvertingSTM32FToBlackMagicProbe/gcc-arm-embedded/: Readme.md
bluetooth-socket/: CMakeLists.txt
bluetooth-socket/src/: main.cpp
bluetooth-socket/src/Implementation/: BluetoothConnection.cpp  BluetoothConnection.h  ConnectionAcceptor.cpp  ConnectionAcceptor.h  LinuxBluetoothSocket.cpp  LinuxBluetoothSocket.h  MessageBuffer.cpp  MessageBuffer.h
bluetooth-socket/src/core-mqtt-sn-gateway/: .gitignore  CMakeLists.txt  README.md
bluetooth-socket/src/core-mqtt-sn-gateway/src/: CoreImpl.cpp  CoreImpl.h  CoreInterface.h  Gateway.h  MqttSnMessageHandler.cpp  MqttSnMessageHandler.h  PersistentInterface.h  mqttsn_messages.h
bluetooth-socket/src/testclients/: l2cap-client.cpp  le_l2cap-client.cpp  rfcomm-client.cpp
bluetooth-socket/src/testserver/: l2cap-server.cpp  le_l2cap-server.cpp  le_l2cap-server_b.cpp  rfcomm-server.cpp
bluez-5.37/: Makefile.in  configure
bluez-5.37/test/: example-advertisement  example-gatt-client  example-gatt-server  example-gatt-server2
bluez-tests/: CMakeLists.txt
bluez-tests/src/bluez/: le_scan.cpp
bluez-tests/src/gatttool_test/: att.c  att.h  gatt.c  gattrib.c  gatttool.c  log.c
bluez-tests/src/gatttool_test/btio/: btio.c
bluez-tests/src/gatttool_test/shared/: crypto.c  util.c
bluez-tests/src/simple_lescan/: main.cpp
doc/: connectpreocedure.dia
